# advent_of_code

2015/day_1/haskell/: OneSpec.hs
2015/day_1/lua/: one.lua
2015/day_1/moonscript/: one.moon
2015/day_6/: advent-of-code-six.cabal
2015/day_6/src/: Lib.hs
2015/day_7/: advent-of-code-seven.cabal
2015/day_7/app/: Main.hs
2015/day_7/src/: Lib.hs
2015/day_7/test/: Spec.hs
2015/elixir/: mix.exs
2015/elixir/lib/: advent_of_code_2015.ex  day_7.ex  day_8.ex
2015/elixir/test/: day_7_test.exs  day_8_test.exs
2015/haskell/day_3/: 3.hs  Three.hs
2015/haskell/day_5/: Five.hs  FiveSpec.hs
2015/haskell/day_6/app/: Main.hs
2015/lua/day_1/: one_spec.lua
2015/moonscript/day_1/: 1.moon
2020/elixir/: .gitignore  mix.exs
2020/elixir/lib/: advent_of_code2020.ex  day_1.ex  day_2.ex
2020/elixir/test/: day_1_test.exs  day_2_test.exs
2022/elixir/: .gitignore  mix.exs
2022/elixir/lib/: advent_of_code2022.ex  day_1.ex  day_2.ex  day_3.ex  day_4.ex
2022/elixir/test/: day_1_test.exs  day_2_test.exs  day_3_test.exs  day_4_test.exs
2023/elixir/: mix.exs
2023/elixir/lib/: advent_of_code_2023.ex  day_1.ex  day_2.ex  day_3.ex  day_4.ex
2023/elixir/test/: day_1_test.exs  day_2_test.exs  day_3_test.exs  day_4_test.exs
day_1/: 1.hs  One.hs  OneSpec.hs
day_1/lua/: 1.lua
day_1/moonscript/: one_spec.moon
day_2/: 2.hs  Two.hs  TwoSpec.hs
day_3/: ThreeSpec.hs
day_4/: 4  4.hi  4.hs  Four.hi  Four.hs  FourSpec.hs
day_5/: 5.hs
day_6/src/: InstructionParser.hs
day_6/test/: Spec.hs
templates/elixir/lib/: day_1.ex
templates/elixir/test/: day_1_test.exs
